--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,24 +1,8 @@
-.nav{
-    width: 100%;
-    padding: 15px 0;
-    background-color: #301592;
-    margin-left: -8px;
-
-
-
-
+a {
+    color: black;
 
 }
+a:hover {
+    color: gray;
 
-.nav .nav-link {
-
-   align-content: center;
-    margin-right: 20px;
-    margin-left: 20px;
-
-
-
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
 }
